syntax = "proto3";

option csharp_namespace = "ChessServer";

package chess;

service ChessService {
    rpc Connect (ConnectRequest) returns (ConnectResponse);
    rpc StartGame (StartGameRequest) returns (StartGameResponse);
    rpc MakeMove (MoveRequest) returns (MoveResponse);
    rpc Resign (ResignRequest) returns (ResignResponse);
    rpc GetGameState (GameStateRequest) returns (stream GameStateResponse);
}

message ConnectRequest {
    string player_id = 1;
}

message ConnectResponse {
    string color = 1;
    string message = 2;
}

message StartGameRequest {
    string player_id = 1;
}

message StartGameResponse {
    string message = 1;
}

message MoveRequest {
    string from = 1;
    string to = 2;
    string promotion = 3;
}

message MoveResponse {
    bool success = 1;
    string message = 2;
}

message ResignRequest {
    string player_id = 1;
}

message ResignResponse {
    string message = 1;
}

message GameStateRequest {
    string player_id = 1;
}

message GameStateResponse {
    string fen = 1;
    string current_turn = 2;
    bool is_check = 3;
    bool is_checkmate = 4;
    bool is_stalemate = 5;
    string message = 6;
}